[gd_scene load_steps=26 format=2]

[ext_resource path="res://data/player/camera.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/player/states/air.gd" type="Script" id=2]
[ext_resource path="res://scripts/player/states/machine.gd" type="Script" id=3]
[ext_resource path="res://data/anim/hurt.tres" type="Animation" id=4]
[ext_resource path="res://scripts/player/states/walk.gd" type="Script" id=5]
[ext_resource path="res://scripts/player/player.gd" type="Script" id=6]
[ext_resource path="res://sprites/player/noah/noah_0s.png" type="Texture" id=7]
[ext_resource path="res://scripts/player/states/hurt.gd" type="Script" id=9]
[ext_resource path="res://scripts/player/states/hold.gd" type="Script" id=10]
[ext_resource path="res://scripts/player/states/dash.gd" type="Script" id=11]
[ext_resource path="res://data/player/parameters/noah.tres" type="Resource" id=12]
[ext_resource path="res://data/shaders/flash.shader" type="Shader" id=13]
[ext_resource path="res://scripts/player/states/idle.gd" type="Script" id=14]
[ext_resource path="res://scripts/player/states/locked.gd" type="Script" id=15]
[ext_resource path="res://data/generic/shadow.tscn" type="PackedScene" id=16]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 13 )
shader_param/flash_color = Color( 0.87451, 0.443137, 0.14902, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="Gradient" id=9]

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 118, 18, 38, 51 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 307, 18, 84, 58 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 19, 12, 55, 74 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 30, 64 )

[sub_resource type="Animation" id=6]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -12 ), Vector2( 0, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Graphics:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.25, 0.75 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:material:shader_param/flash_modifier")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Graphics:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:material:shader_param/flash_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.87451, 0.443137, 0.14902, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:material:shader_param/flash_modifier")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Graphics:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:material:shader_param/flash_modifier")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"CameraManipulator",
"Player",
]]
material = SubResource( 1 )
z_index = 4000
input_pickable = true
collision_layer = 0
collision_mask = 97
collision/safe_margin = 1.0
script = ExtResource( 6 )
character = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
light_mask = 2
position = Vector2( 0, 100.25 )
scale = Vector2( 1, 197.5 )
z_as_relative = false
texture = SubResource( 10 )

[node name="Shadow" parent="." instance=ExtResource( 16 )]

[node name="Graphics" type="Node2D" parent="."]
use_parent_material = true
position = Vector2( 0, -4 )

[node name="Body" type="Sprite" parent="Graphics"]
use_parent_material = true
texture = SubResource( 2 )

[node name="Head" type="Sprite" parent="Graphics/Body"]
use_parent_material = true
texture = SubResource( 3 )
offset = Vector2( 0, -44 )

[node name="Legs" type="Sprite" parent="Graphics/Body"]
use_parent_material = true
z_index = -1
texture = SubResource( 4 )
offset = Vector2( 6, 48 )

[node name="PlayerAnimator" type="AnimationPlayer" parent="Graphics"]

[node name="ArmsPosition" type="Position2D" parent="."]
__meta__ = {
"_gizmo_extents_": 32.0
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
START_STATE = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Air" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Hold" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Locked" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 16 )
shape = SubResource( 5 )

[node name="Camera" parent="." instance=ExtResource( 1 )]

[node name="GraphicsAnimator" type="AnimationPlayer" parent="."]
anims/bump = SubResource( 6 )
anims/dash = SubResource( 7 )
anims/default = SubResource( 8 )
anims/hurt = ExtResource( 4 )

[node name="Timers" type="Node" parent="."]

[node name="GracePeriodTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="ComboTimer" type="Timer" parent="Timers"]
wait_time = 4.0
one_shot = true

[node name="FeetPosition" type="Position2D" parent="."]
position = Vector2( 0, 80 )
